[tool.poetry]
name = "streamlit_dashboard_vp"
version = "0.1.0"
description = ""
authors = ["errapS"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
streamlit = "^1.1.0"
streamlit-elements = "==0.1.*"
streamlit-modal = "^0.1.2"
streamlit-float = "^0.3.2"
altair= "4.0"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
